--- a/sass/mixins/_mixins.scss
+++ b/sass/mixins/_mixins.scss
@@ -63,7 +63,7 @@
   }
 }
 @mixin tablet {
-  @media screen and (min-width: 761px) {
+  @media screen and (min-width: 746px) {
     @content;
   }
 }
